revise intro and methods

--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -12,12 +12,17 @@ In order to observe network variants reliably, previous research has used highly
 <!--
 I feel like I should maybe talk about what EEG is more here, like in the intro of miljevicetal_EEGconnectivityFundamentalGuide_2021 
 
+@bastosschoffelen_TutorialReviewFunctional_2016
+
 It would be good to contrast with BOLD signal too
+@brookesetal_MeasuringFunctionalConnectivity_2012 has a nice introduction covering what I was thinking of
 -->
+
+> NOTE TO ANDREA!!! Somewhere around this point in the introduction I thought it would be nice to contrast EEG with fMRI a bit more. For example, in @brookesetal_MeasuringFunctionalConnectivity_2012, they mention that "Functional magnetic resonance imaging (fMRI) has become a modality of choice for characterisation of functional connectivity within these networks, both at rest and during tasks (see e.g. Smith et al., 2009). However, fMRI is an indirect measure of brain activity based on haemodynamic responses to underlying electrodynamics. Its indirect nature and limited temporal resolution mean that fMRI cannot probe the electrical processes that mediate connectivity or the most rapid temporal fluctuations in network activity. Magnetoencephalography (MEG) detects extra-cranial magnetic fields induced by synchronised neuronal current flow in the brain. In this way it offers advantages over indirect techniques such as fMRI as it can bypass haemodynamics and probe phenomena such as neural oscillations which are thought to be a more direct manifestation of cortical connectivity". And maybe dig into their similarities a bit more (e.g., how does alpha connectivity relate to BOLD connectivity).
 
 A natural solution to this barrier is to explore the feasibility of lower cost neuroimaging modalities for investigating network variants beyond the window of functional magnetic resonance imaging. Electrophysiological recording methods such as electroencephalography (EEG) offer one such solution, given their cost effectiveness relative to functional magnetic resonance imaging, and their ability to directly measure whole brain functional networks in real time (at the cost of limited spatial resolution) [see @oneilletal_DynamicsLargescaleElectrophysiological_2018]. The temporal resolution of EEG is particularly relevant, as the temporal aspects of network variants are a growing area of interest in the functional magnetic resonance imaging literature [e.g., @vandevilleetal_WhenMakesYou_2021]. Although EEG does not have precise spatial resolution in comparison to functional magnetic resonance imaging, numerous studies have demonstrated that measures of electrophysiological connectivity show spatial similarity to the functional connectivity commonly observed with functional magnetic resonance imaging regardless of temporal scale [see @sadaghianiwirsich_IntrinsicConnectomeOrganization_2020]. Given this, similar network variants to those identified with functional magnetic resonance imaging should be identifiable with EEG. However, the vast majority of work using EEG to study whole brain functional networks focuses on group-level approaches, so the feasibility of using EEG to study network variants is largely unknown. 
 
-In light of this, the purpose of the current study is to address the feasibility of using EEG to study network variants. Paralleling the respective developments in the functional magnetic resonance imaging literature [in particular, see @gordonetal_PrecisionFunctionalMapping_2017; @grattonetal_FunctionalBrainNetworks_2018], <!--  we first test how much data is needed to observe stable effects within an individual using repeated measures resting state EEG. Given the higher temporal resolution of EEG, we expect that shorter data acquisition times will be needed to obtain reliable results. After establishing the amount of data needed to observe stable effects within an individual,  --> we will examine how whole brain functional networks differ between and within individuals using EEG source space functional connectivity analysis and measures of network similarity.
+In light of this, the purpose of the current study is to address the feasibility of using EEG to study network variants. Paralleling the respective developments in the functional magnetic resonance imaging literature [in particular, see @gordonetal_PrecisionFunctionalMapping_2017; @grattonetal_FunctionalBrainNetworks_2018], we will examine how whole brain functional networks differ between and within individuals using EEG source space functional connectivity analysis and measures of network similarity.
 
 There are four archetypal outcomes we could find. The first two outcomes assume brain activity is largely intrinsic, and the last two outcomes assume brain activity is largely reactive [see @raichle_TwoViewsBrain_2010]. First, if functional networks do not differ between or within individuals, then there would be high similarity among all measurements regardless of individual, session, or state. Second, if functional networks do differ between individuals but do not differ within individuals, then there would be high similarity among all measurements within an individual but low similarity between individuals regardless of session or state. Third, if functional networks do not differ between individuals but do differ within individuals, then there would be high similarity between individuals and low similarity within individuals across session and state. Fourth, if functional networks differ between and within individuals, then there would be low similarity among all measurements regardless of individual, session, or state. It is likely that the real data will be representative of more than one of these archetypes. 
 
